fix: disable hover bubble on cat on mobile

--- a/assets/sass/styles.scss
+++ b/assets/sass/styles.scss
@@ -355,6 +355,7 @@ a:hover {
 
   .info__cat {
     margin-right: 0;
+    pointer-events: none;
   }
 
   footer {
